<resources>
    <string name="app_name">IT-портал</string>
    <string name="text_login">Введите ваш логин</string>
    <string name="text_password">Введите ваш пароль</string>
    <string name="text_enter">Войти</string>
    <string name="text_registr">Зарегистрироваться</string>
    <string name="Search_title">Search</string>
    <string name="title_activity_test">test</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="Books_list">Список книг</string>
    <string name="test_list">Список тестов</string>
    <string name="download_book_string">Загруженные книги</string>
    <string name="Save_title_menu">Сохранить</string>
    <string name="Text_header">Главы</string>
    <string name="start_test">Начать тест</string>
    <string name="back_btn_test">Назад</string>
    <string name="next_btn_test">Далее</string>
    <string name="finish_btn_test">Завершить тест</string>
    <string name="Open_navigation">Открыто</string>
    <string name="Close_navigation">Закрыто</string>
    <string name="btn_text_savedbook">Загруженные книги</string>
    <string name="Scote_btn_text">Завершить</string>
</resources>
