<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/my_background"
        android:padding="20pt"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="cursive"
            android:text="IT-портал учебной литературы"
            android:textSize="40sp" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:minWidth="170pt"
                android:orientation="vertical"
                android:paddingTop="5pt">

                <EditText
                    android:id="@+id/editText_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:hint="@string/text_login"
                    android:maxLines="1"/>

                <EditText
                    android:id="@+id/editText_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:hint="@string/text_password"
                    android:inputType="textPassword"
                    android:maxLines="1"/>

                <Button
                    android:id="@+id/button_signin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/text_enter" />
            </LinearLayout>
            <Button
                android:id="@+id/button_registr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right|bottom"
                android:text="@string/text_registr"/>
        </FrameLayout>

    </LinearLayout>


</android.support.constraint.ConstraintLayout>